<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="1"
    android:id="@+id/LinearLayout_1">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:padding="0dp"
        android:id="@+id/RelativeLayout_1"
        android:layout_weight="0.03"
        android:background="#4d31aa">

    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:id="@+id/RelativeLayout_8">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/LinearLayout_marker1"
            android:layout_toStartOf="@+id/LinearLayout_marker1"
            android:gravity="center"
            android:id="@+id/buttonHolder1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wifi_tethering"
                android:onClick="onSetWifiHotspot"
                android:background="#fafafa"
                android:contentDescription="@string/Turn_on_off_hotspot"
                android:id="@+id/imageButton_changeHotspot"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="1.5dp"
            android:layout_height="10dp"
            android:layout_alignTop="@+id/buttonHolder1"
            android:layout_alignBottom="@+id/buttonHolder1"
            android:layout_centerInParent="true"
            android:id="@+id/LinearLayout_marker1"
            android:background="#73a4f7">
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/LinearLayout_marker1"
            android:layout_toEndOf="@+id/LinearLayout_marker1"
            android:id="@+id/buttonHolder_2">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gps_marker"
                android:onClick="onGPS"
                android:background="#fafafa"
                android:contentDescription="@string/Update_GPS"
                android:id="@+id/imageButton_getGPS"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:padding="0dp"
        android:id="@+id/RelativeLayout_7"
        android:layout_weight="0.03"
        android:background="#5e86cb">

    </RelativeLayout>




    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RelativeLayout_4"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/My_GPS_Location"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView_myLocationIs"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_alignBottom="@id/textView_myLocationIs"
            android:layout_alignTop="@id/textView_myLocationIs"
            android:layout_height="wrap_content"
            android:id="@+id/textView_LocationContent"
            android:layout_toRightOf="@+id/textView_myLocationIs"
            android:layout_toEndOf="@id/textView_myLocationIs"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:gravity="start|center_vertical"
            android:paddingLeft="5dp"/>

    </RelativeLayout>


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RelativeLayout_5"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Camera_ip_is"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView_CameraIpAddress"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_alignBottom="@id/textView_CameraIpAddress"
            android:layout_alignTop="@id/textView_CameraIpAddress"
            android:layout_height="wrap_content"
            android:id="@+id/textView_CameraIpContent"
            android:layout_toRightOf="@+id/textView_CameraIpAddress"
            android:layout_toEndOf="@id/textView_CameraIpAddress"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:gravity="start|center_vertical"
            android:text="@string/Camera_ip_addr"
            android:paddingLeft="5dp"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RelativeLayout_6"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wifi_hotspot_is"
            android:id="@+id/textView_HotspotStatus"
            android:textSize="15sp"
            android:gravity="start|center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_alignBottom="@id/textView_HotspotStatus"
            android:layout_alignTop="@id/textView_HotspotStatus"
            android:layout_height="wrap_content"
            android:id="@+id/textView_textView_HotspotStatusContent"
            android:layout_toRightOf="@+id/textView_HotspotStatus"
            android:layout_toEndOf="@id/textView_HotspotStatus"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="12sp"
            android:gravity="start|center_vertical"
            android:paddingLeft="5dp" />


    </RelativeLayout>






<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#5e86cb"
    android:layout_weight="0.03"
    android:id="@+id/LinearLayout_2">

</LinearLayout>


    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/RelativeLayout_9">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/LinearLayout_marker2"
            android:layout_toStartOf="@+id/LinearLayout_marker2"
            android:gravity="center"
            android:id="@+id/buttonHolder3"
            android:padding="5dp"
            android:layout_marginRight="5dp"
            android:background="#baccf8">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/camera_launcher"
                android:onClick="launchCamera"
                android:background="#baccf8"
                android:contentDescription="@string/View_camera"
                android:id="@+id/imageButton_CameraOn"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:id="@+id/LinearLayout_marker2"
        android:layout_marginLeft="5dp">
    </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/LinearLayout_marker2"
            android:layout_toEndOf="@+id/LinearLayout_marker2"
            android:id="@+id/buttonHolder_4"
            android:padding="5dp"
            android:background="#baccf8">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/map_launcher"
                android:onClick="onStartMap"
                android:background="#baccf8"
                android:contentDescription="@string/view_map"
                android:id="@+id/imageButton_MapOn"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </RelativeLayout>




</LinearLayout>
